# viltrum

./: .gitignore  CITATION.cff  CMakeLists.txt  Compiler.cmake  External.cmake  Paths.cmake  README.md  viltrum.h  viltrum.tog2021.h
doc/: binintegrators.md  error.md  installation.md  integrands.md  integrators.md  ranges.md
functions/: BrownianNoise.hpp  functions-render3d.h  functions-render4d.h  functions.h  functions1d.h  functions2d.h  functions3d.h  functions4d.h
main/: convergence-2d.cc  convergence-controlvariates-1d.cc  map-convergence-project-2d.cc  map-convergence-project.cc  motivation-presentation.cc  overview-presentation.cc  overview.cc  plot-2d.cc  plot-project-2d.cc  plot.cc  polynomials-presentation.cc  render3d.cc  render4d.cc  stepper-samples-count.cc  test-multidimensional-range.cc  test-quadrature-bins.cc  test-quadrature-plot.cc  test-quadrature.cc  test-region.cc  test.cc
main.old/: convergence-1d.cc  convergence-datafile.h  convergence-project-2d.cc  experiment-multiple-scattering.cc  experiment-single-scattering.cc  map-convergence-average.cc  map-convergence-project.cc  motivation-presentation.cc  plot-1d.cc  plot-2d.cc  plot-3d-constant.cc  polynomials-presentation.cc  test-multidimensional-range.cc  test-quadrature-bins.cc  test-region.cc
main.old/doc/: integrators.cc  ranges.cc
main.old/multiarray/: test-fold.cc  test-split.cc  test-transform.cc
main/compilation-tests/: array-parameter.cc  concat.cc  covariance.cc  crespo21.cc  inverse.cc  montecarlo-rng.cc  multiple-parameters-2d.cc  multiple-parameters-sequence.cc  multiple-parameters.cc  random-sequence.cc  region-sample-2d.cc  region-sample-3d.cc  region-sample.cc
main/doc/: bins.cc  integrands-infinite.cc  integrands.cc  integrators-bins.cc  integrators.cc  montecarlo-1d.cc  montecarlo-2d.cc  montecarlo-infd.cc  ranges-infinite.cc  ranges.cc  sphere.cc
main/multiarray/: test-fill.cc  test-fold.cc  test-slice.cc  test-split.cc  test-transform.cc
multiarray/: array.h  fill.h  fold.h  io.h  multiarray-constref.h  multiarray-crtp.h  multiarray-view.h  multiarray.h  operators.h  slice.h  split.h  transform.h
plot/: control-variate.h  convergence.h  integration2d.h  map-error-time.h  regions.h
quadrature/: bins-containers-adaptor.h  control-variates.h  error.h  integrate-adaptive-control-variates-precalculate.h  integrate-adaptive-control-variates.h  integrate-bins-adaptive-precalculate.h  integrate-bins-adaptive.h  integrate-bins-stepper.h  integrate-bins.h  integrate-optimized-adaptive-stratified-control-variates.h  integrate.h  monte-carlo.h  munoz2014.h  nested.h  polynomial.h  range.h  region.h  rules.h  sample-vector.h  vector-dimensions.h
render/: light-sources.h  medium.h  multiple-scattering.h  surface.h
scripts/: convergence-bins-2d.sh  map-plot-2d.sh  plot-2d.sh  plot-sample-distribution.sh  render-area-fast.sh  render-media-fast.sh  render-media.sh  render-medium-area-fast.sh  render-multiple-fast.sh
src/: array.h  foreach.h  integrate.h  integrator-per-bin-parallel-old.h  integrator-per-bin-parallel.h  integrator-per-bin.h  log.h  multidimensional-range.h  range-infinite.h  range.h  tensor.h
src/combination/: concat.h  fubini.h  regions-generator-fubini.h  reorder.h  sequence_from_iterators.h
src/control-variates/: integrator-adaptive-control-variates.h  integrator-adaptive-debug-count-regions.h  integrator-adaptive-fubini-variance-reduction-optimized.h  integrator-adaptive-fubini-variance-reduction.h  integrator-adaptive-variance-reduction-optimized.h  integrator-adaptive-variance-reduction.h  integrator-crespo2021.h  mutexed-tensor-vector.h  norm.h  region-russian-roulette.h  region-sampling.h  region-stratification.h  regions-integrator-debug-count-regions.h  regions-integrator-parallel-control-variates-high-memory.h  regions-integrator-parallel-control-variates-low-memory.h  regions-integrator-parallel-control-variates.h  regions-integrator-parallel-variance-reduction-optimized.h  regions-integrator-parallel-variance-reduction.h  regions-integrator-variance-reduction.h  weight-strategy.h
src/monte-carlo/: monte-carlo-per-bin-parallel.h  monte-carlo-per-bin.h  monte-carlo.h  random-sequence-ref-dis.h  random-sequence-ref.h  random-sequence-rng.h  random-sequence-seed.h  random-sequence.h
src/multiarray/: fill.h  multiarray-constref.h  multiarray-crtp.h  multiarray-view.h  multiarray.h  operators.h  slice.h  split.h
src/nested/: error-heuristic.h  error-metric.h  integrator-adaptive-iterations.h  integrator-adaptive-tolerance.h  nested.h  regions-generator-adaptive-heap.h
src/newton-cotes/: integrator-region-based.h  integrator-regions.h  newton-cotes.h  region.h  regions-generator-single.h  regions-integrator-parallel-bins.h  regions-integrator-parallel-regions.h  regions-integrator-sequential.h  rules-negative-sampling.h  rules.h
src/rng/: xoroshiro.h
tracking/: cv_tracking.h  cvquadrature_tracking.h  cvquadrature_tracking_v0.h  delta_tracking.h  ray_marching.h  residual_ratio_tracking.h  transmittance_test.cpp  transmittance_test1.cpp  weighted_delta_tracking.h
utils/: cimg-wrapper.h  cpp-adapt.h  function-wrapper.h
